--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
   angular_router: ^2.0.0-alpha+19
   http: ^0.12.0
   json_serializable: ^1.5.1
-  dart_jsona:
-    git: git@github.com:artem-galas/dart_jsona.git
+  dart_jsona: ^0.0.1
   rxdart: ^0.19.0
 
 dev_dependencies:
